cmakelist to suport linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,22 @@ add_executable(my_crow_server main.cpp)
 # Include Crow header file
 target_include_directories(my_crow_server PRIVATE include)
 
+# Check if running on Linux
+if (UNIX)
+    message(STATUS "Configuring for Linux")
+
+    # Find ASIO (either standalone or system-wide)
+    find_path(ASIO_INCLUDE_DIR asio.hpp PATHS /usr/include /usr/local/include)
+
+    if (ASIO_INCLUDE_DIR)
+        message(STATUS "ASIO found in ${ASIO_INCLUDE_DIR}")
+        target_include_directories(my_crow_server PRIVATE ${ASIO_INCLUDE_DIR})
+        target_link_libraries(my_crow_server PRIVATE pthread)
+    else()
+        message(FATAL_ERROR "ASIO not found. Please install ASIO or Boost.Asio.")
+    endif()
+endif()
+
 # Link with pthread (if using MinGW)
 if (MINGW)
     target_link_libraries(my_crow_server pthread)
